[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
keyring = "4.0.0-rc.1"
clap = { version = "4.5", features = ["derive"] }
snafu = "0.8.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
inquire = "0.7.5"
secrecy = {  version = "0.10.3" , features = ["serde"]}
chrono = "0.4.41"
stackable-serious-business = {branch = "main", git="https://github.com/soenkeliebau/serious-business.git"}

[patch."https://github.com/soenkeliebau/serious-business"]
stackable-serious-business = { path = "/home/sliebau/coden/github.com/soenkeliebau/serious-business" }
